# py_command_suite

./: .coverage  .gitignore  .secrets.baseline  CLAUDE.md  CLAUDE_template.md  IDD_transcript.md  INSTALL.md  PCS-Power-Analysis-Summary.md  PROJECT-DEFINITION.md  R&D-Framework-Implementation-Summary.md  README.md  chat.md  deploy-pcs.sh  idea.md  implementation-summary.md  install_claude.sh  json_cli_tool_plan.json  pyproject.toml  task.md  test_data.json  understanding-gaps.md  update_claude.sh
.claude/: coordination-analysis.json  implementation-summary.json  research-findings.json  review-report.json
.claude/agents/: background-runner.md  coder.md  doc-scraper.md  implementer.md  orchestrator.md  planner.md  researcher.md  reviewer.md
.claude/background/: rd-framework-essentials.md
.claude/commands/: background.md  bash.md  format.md  git.md  grep.md  http.md  lint.md  loadbundle.md  onboard.md  package.md  prime-rd.md  read.md  sec-audit.md  test.md  types.md  uv-setup.md  write.md
.claude/context-bundles/: error-implementation-pack.json  error-research-pack.json  error-review-pack.json  implement-cli-core.json  implement-comprehensive-tests.json  research-cli-requirements.json  review-implementation-quality.json
.claude/delegation/: json-cli-execution-plan.json
.claude/hooks/: context-bundles.json  guardrails.json  limits.json  onerror.md  posttooluse.md  predelegate.md  preplan.md  pretooluse.md
.claude/output-styles/: json.patch.schema.json  json.plan.schema.json  json.report.schema.json  json.review.schema.json
.claude/plans/: json-cli-final-plan.json  json-cli-orchestration.json
.claude/policies/: limits.json  permissions.json  (+1 more)
.claude_backupv2/: 20250909_23-universal-toolkit-enhancement.md  secrets-scan-20250910_0044.md  settings.local.json  uv-setup-20250909_23.md
USER_DOCS/: USER_ONBOARDING.md
(+72 files in other folders)
