[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-command-suite"
version = "0.1.0"
description = "Python command suite for development tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.107.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py_command_suite"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
]
